(lang dune 3.10)

(name midori_shibukawa)

(generate_opam_files true)

(source
 (github midorishibukawa/midori-shibukawa_ml))

(authors "midori shibukawa")

(maintainers "midori shibukawa")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name midori_shibukawa)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune dream)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
